# dcsbm-transformer

./: .gitignore  Makefile  PLOTTING_GUIDE.md  README.md  REPORTING_GUIDE.md  RESULTS_SCHEMA.md  combined-spec.md  pyproject.toml  run_experiment.py  scaffold.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: deviation-log.md  pre-registration.md  softmax_bound.tex
results/n500_w64_r57_d128_L4_s42_20260304_110906/: config.json
results/n500_w64_r57_d128_L4_s42_20260308_034717/: per_r_results.txt
scripts/: profile_evaluation.py  runpod_eval.sh
tests/: test_audit_report.py  test_auroc_horizon.py  test_behavioral.py  test_calibration.py  test_compliance_curve.py  test_config.py  test_e2e_pipeline.py  test_evaluation_pipeline.py  test_event_extraction.py  test_graph_cache.py  test_graph_generation.py  test_jumpers.py  test_math_pdf.py  test_model.py  test_multi_head.py  test_null_model.py  test_perturbation_bound.py  test_pr_curves.py  test_reporting.py  test_reproducibility.py  test_results.py  test_signal_concentration.py  test_spectrum.py  test_split.py  test_statistical_controls.py  test_svd_benchmark.py  test_svd_metrics.py  test_training.py  test_training_checkpoint.py  test_training_evaluate.py  test_training_pipeline.py  test_visualization.py  test_walk_corpus.py  test_walk_generator.py
(+267 files in other folders)
