[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dcsbm-transformer"
version = "0.1.0"
description = "SVD instability prediction in transformer attention on DCSBM-generated sequences"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "numpy>=2.0",
    "dacite>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
