[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dcsbm-transformer"
version = "0.1.0"
description = "SVD instability prediction in transformer attention on DCSBM-generated sequences"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "numpy>=2.0",
    "dacite>=1.8",
    "scipy>=1.14",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
